// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSegmented > 快照测试 > 块级分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk delightful-segmented-block css-dev-only-do-not-override-yotw4n css-var-rg"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="选项1"
        >
          选项1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项2"
        >
          选项2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > 快照测试 > 基础分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-r4"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="选项1"
        >
          选项1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项2"
        >
          选项2
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项3"
        >
          选项3
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > 快照测试 > 大尺寸分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk delightful-segmented-lg css-dev-only-do-not-override-yotw4n css-var-ra"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="选项1"
        >
          选项1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项2"
        >
          选项2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > 快照测试 > 小尺寸分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk delightful-segmented-sm css-dev-only-do-not-override-yotw4n css-var-rc"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="选项1"
        >
          选项1
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项2"
        >
          选项2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > 快照测试 > 带图标分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-re"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
        >
          <span
            class="delightful-segmented-item-icon"
          >
            <span>
              🚀
            </span>
          </span>
          <span>
            选项1
          </span>
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
        >
          <span
            class="delightful-segmented-item-icon"
          >
            <span>
              ⭐
            </span>
          </span>
          <span>
            选项2
          </span>
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > 快照测试 > 带默认值分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-r6"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项1"
        >
          选项1
        </div>
      </label>
      <label
        class="delightful-segmented-item delightful-segmented-item-selected"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="选项2"
        >
          选项2
        </div>
      </label>
      <label
        class="delightful-segmented-item"
      >
        <input
          class="delightful-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项3"
        >
          选项3
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulSegmented > 快照测试 > 禁用状态分段控制器快照 1`] = `
<DocumentFragment>
  <div
    aria-label="segmented control"
    class="delightful-segmented delightful-segmented-disabled acss-1yvjgsk css-dev-only-do-not-override-yotw4n css-var-r8"
    role="radiogroup"
  >
    <div
      class="delightful-segmented-group"
    >
      <label
        class="delightful-segmented-item delightful-segmented-item-selected delightful-segmented-item-disabled"
      >
        <input
          checked=""
          class="delightful-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="true"
          class="delightful-segmented-item-label"
          title="选项1"
        >
          选项1
        </div>
      </label>
      <label
        class="delightful-segmented-item delightful-segmented-item-disabled"
      >
        <input
          class="delightful-segmented-item-input"
          disabled=""
          name="test-id"
          type="radio"
        />
        <div
          aria-selected="false"
          class="delightful-segmented-item-label"
          title="选项2"
        >
          选项2
        </div>
      </label>
    </div>
  </div>
</DocumentFragment>
`;
